--- a/.github/workflows/phigros.yml
+++ b/.github/workflows/phigros.yml
@@ -28,11 +28,17 @@ jobs:
       - name: Prepare Environment
         run: |
           sudo apt update
-          sudo apt install php php-curl curl libnss3 nss-plugin-pem ca-certificates
+          sudo apt install php php-curl curl libnss3 nss-plugin-pem ca-certificates python3
           # Prepare curl-impersonate
           wget https://ghproxy.com/https://github.com/lwthiker/curl-impersonate/releases/download/v0.5.4/curl-impersonate-v0.5.4.x86_64-linux-gnu.tar.gz -O curl.tar.gz
           tar -xvf curl.tar.gz
+          # Prepare UnityPy
+          git clone https://ghproxy.com/https://github.com/K0lb3/UnityPy.git
+          cd UnityPy
+          python -m pip install .
 
       - name: Download Resource Package
         run: |
           ./curl_chrome110 --parallel --parallel-immediate --parallel-max 64 -L -k -v -C - -o Phigros.xapk https://d.apkpure.com/b/XAPK/com.PigeonGames.Phigros?version=${{ github.event.inputs.ver }}
+          unzip Phigros.xapk
+          unzip Android/obb/com.PigeonGames.Phigros/main.*.com.PigeonGames.Phigros.obb
