--- a/.github/workflows/phigros.yml
+++ b/.github/workflows/phigros.yml
@@ -39,6 +39,10 @@ jobs:
 
       - name: Download Resource Package
         run: |
-          ./curl_chrome110 --parallel --parallel-immediate --parallel-max 64 -L -k -v -C - -o Phigros.xapk https://d.apkpure.com/b/XAPK/com.PigeonGames.Phigros?version=${{ github.event.inputs.ver }}
+          ./curl_chrome110 --parallel --parallel-immediate --parallel-max 64 -L -k -C - -o Phigros.xapk https://d.apkpure.com/b/XAPK/com.PigeonGames.Phigros?version=${{ github.event.inputs.ver }}
           unzip Phigros.xapk
           unzip Android/obb/com.PigeonGames.Phigros/main.*.com.PigeonGames.Phigros.obb
+          
+      - name: Unpack Chart From Resource Package
+        run: |
+          python3 unpack.py
