--- a/.github/workflows/phigros.yml
+++ b/.github/workflows/phigros.yml
@@ -10,7 +10,7 @@ on:
       ver:
         description: 'Package Version'
         required: true
-        default: 'latest'
+        default: ''
       accept:
         description: 'Chart Filter (Use , to seperate them)'
         required: true
@@ -45,7 +45,7 @@ jobs:
 
       - name: Download Resource Package
         run: |
-          ./curl_chrome110 --parallel --parallel-immediate --parallel-max 64 -L -k -C - -o Phigros.xapk https://d.apkpure.com/b/XAPK/com.PigeonGames.Phigros?version=${{ github.event.inputs.ver }}
+          ./curl_chrome110 --parallel --parallel-immediate --parallel-max 64 -L -k -C - -o Phigros.xapk https://d.apkpure.com/b/XAPK/com.PigeonGames.Phigros?versionCode=${{ github.event.inputs.ver }}
           unzip Phigros.xapk
           unzip Android/obb/com.PigeonGames.Phigros/main.*.com.PigeonGames.Phigros.obb
           mv ./assets/aa ./aa
